css/style.css
:root {
    --color-background-h: 0;
    --color-background-s: 0%;
    --color-background-l: 18%;

    --color-primary-h: 0;
    --color-primary-s: 0%;
    --color-primary-l: 90%;

    --color-text-h: 0;
    --color-text-s: 0%;
    --color-text-l: 90%;

    font-size: calc(14 / 16 * 1rem);
}

/* Miscelaneous */

:focus {
    outline: none;
}

select {
    padding: 0.3rem 0.5rem;
    margin-top: -0.3rem;
    color: hsl(var(--color-text-h), var(--color-text-s), var(--color-text-l));
    background-color: rgb(22, 24, 26);
    border: none;
    border-radius: 0.35rem;
    font-size: inherit;
}

button {
    display: block;
    background: none;
    color: inherit;
    border: none;
    padding: 0;
    font: inherit;
    cursor: pointer;
    outline: inherit;
}

::-webkit-scrollbar {
    width: 1rem;
}

::-webkit-scrollbar-track-piece {
    margin: 0.3rem 0;
}

::-webkit-scrollbar-thumb {
    border: 0.2rem solid rgba(0, 0, 0, 0);
    border-radius: 9999px;
    background-clip: padding-box;
    background-color: hsla(
        var(--color-primary-h),
        var(--color-primary-s),
        var(--color-primary-l),
        0.15
    );
}
::-webkit-scrollbar-thumb:hover {
    background-color: hsl(
        var(--color-primary-h),
        var(--color-primary-s),
        var(--color-primary-l),
        0.25
    );
}

::-webkit-scrollbar:horizontal {
    display: none;
}

html,
body {
    height: 100%;
    margin: 0;
    padding: 0;
    background-color: hsl(
        var(--color-background-h),
        var(--color-background-s),
        var(--color-background-l)
    );
    background-size: cover;
    color: hsl(var(--color-text-h), var(--color-text-s), var(--color-text-l));
    overflow: hidden;
    font-family: sans-serif;
    font-size: 100%;
}

/* Shortcuts */

.shortcuts {
    margin: 3vh auto 0 auto;
    width: max-content;
    display: flex;
    align-items: center;
}

.shortcut {
    min-width: 5rem;
    min-height: 5rem;
    width: 5.2vw;
    height: 5.2vw;
    max-width: 5.2vw;
    max-height: 5.2vw;
    margin: 0.5vw;
    display: inline-flex;
    justify-content: center;
    align-items: center;
    background-color: hsl(
        var(--color-background-h),
        var(--color-background-s),
        calc(var(--color-background-l) + 15%),
        0.25
    );
    border-radius: 25%;
    text-decoration: none;
    transition: background-color 250ms ease-in, transform 250ms ease-in;
    cursor: pointer;
}
.shortcut:hover {
    background-color: hsl(
        var(--color-background-h),
        var(--color-background-s),
        calc(var(--color-background-l) + 17%),
        0.5
    );
    transform: translateY(-3px);
}
.shortcut:focus {
    background-color: hsl(
        var(--color-background-h),
        var(--color-background-s),
        calc(var(--color-background-l) + 15%),
        0.5
    );
    transform: translateY(-3px);
}

.shortcut span {
    width: 70%;
    height: 70%;
    display: flex;
    align-items: center;
    justify-content: center;
    background-color: hsl(
        var(--color-background-h),
        var(--color-background-s),
        calc(var(--color-background-l) - 2%)
    );
    border-radius: 25%;
    font-size: calc(28 / 16 * 1rem);
    color: hsl(
        var(--color-primary-h),
        var(--color-primary-s),
        var(--color-primary-l)
    );
    pointer-events: none;
}

.shortcut img {
    min-width: 2.5rem;
    width: 2.5vw;
    pointer-events: none;
}

.shortcut-trash {
    display: none;
    position: fixed;
    bottom: 4vh;
    right: 50%;
    width: 2.5rem;
    height: 2.5rem;
    padding: 10px;
    border-radius: 50%;
    background-color: hsl(
        var(--color-background-h),
        var(--color-background-s),
        calc(var(--color-background-l) + 15%),
        0.25
    );
    fill: hsl(
        var(--color-primary-h),
        var(--color-primary-s),
        var(--color-primary-l),
        0.5
    );
}

/* Clock */
.clock {
    position: fixed;
    bottom: 1vh;
    right: 1vw;
    color: hsl(
        var(--color-primary-h),
        var(--color-primary-s),
        var(--color-primary-l),
        0.75
    );
    user-select: none;
}

.time {
    font-size: 4rem;
    text-align: center;
    line-height: 1;
}
.day {
    font-size: 1.1rem;
    font-weight: 700;
    text-align: center;
}

/* Settigns */
.settings-icon {
    position: fixed;
    bottom: 1vh;
    left: 1vw;
    display: flex;
    align-items: center;
    justify-content: center;
    width: 2rem;
    height: 2rem;
    padding: 2px;
    border-radius: 9999px;
    opacity: 0.75;
    fill: hsl(
        var(--color-primary-h),
        var(--color-primary-s),
        var(--color-primary-l),
        0.5
    );
    cursor: pointer;
}
.settings-icon:hover {
    fill: hsl(
        var(--color-primary-h),
        var(--color-primary-s),
        var(--color-primary-l),
        0.75
    );
}
.settings-icon:focus {
    fill: hsl(
        var(--color-primary-h),
        var(--color-primary-s),
        var(--color-primary-l),
        0.75
    );
}

.settings-pane {
    display: none;
    opacity: 0;
    width: 54vw;
    height: 70vh;
    min-width: fit-content;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    background-color: hsl(
        var(--color-background-h),
        var(--color-background-s),
        calc(var(--color-background-l) + 3%),
        0.75
    );
    backdrop-filter: blur(25px);
    box-shadow: 0 2px 15px -7px black;
    border-radius: 0.7rem;
}

.settings-nav {
    margin: 10px 0;
    min-width: fit-content;
    padding: 1.2rem 0 1rem 1rem;
    border-right: solid;
    border-width: 1px;
    border-color: rgba(255, 255, 255, 0.15);
    font-size: 1.05rem;
    overflow: scroll;
}

.settings-nav ul {
    list-style: none;
    padding: 0;
    margin: -10px 0;
}

.settings-nav ul button {
    width: 100%;
    padding: 0.7rem 0.8rem 0.7rem 0.4rem;
    border-radius: 0.35rem;
    text-align: left;
}
.settings-nav ul button:hover {
    background-color: hsl(
        var(--color-primary-h),
        var(--color-primary-s),
        var(--color-primary-l),
        0.15
    );
    cursor: pointer;
}

.settings-nav ul button::before {
    content: "";
    display: inline-block;
    height: 1.6rem;
    width: 0.25rem;
    position: absolute;
    left: 0.5rem;
    background-color: hsl(
        var(--color-primary-h),
        var(--color-primary-s),
        var(--color-primary-l),
        0.75
    );
    border-radius: 1rem;
    transform: scale(1, 0);
    transition: transform ease-in-out 250ms;
}
.settings-nav ul button.selected::before {
    transform: scale(1, 1);
}

.settings-options {
    width: 100%;
    padding: 1rem 0.3rem 1rem 1rem;
    font-size: 1rem;
    overflow: scroll;
}

.settings-options form {
    background-color: hsl(
        var(--color-background-h),
        var(--color-background-s),
        calc(var(--color-background-l) - 10%),
        0.25
    );
    padding: 1rem 1rem 0 1rem;
    margin-bottom: 1rem;
    border-radius: 0.35rem;
}

.settings-options form > div {
    display: flex;
    justify-content: space-between;
    padding-bottom: 1rem;
}

.settings-options button {
    background-color: rgb(22, 24, 26);
    padding: 0.5rem 0.7rem;
    border-radius: 0.35rem;
}

